--- a/reports/qmd_example.qmd
+++ b/reports/qmd_example.qmd
@@ -5,10 +5,14 @@ format:
     html:
         toc: true
         toc-location: left-body
-        number-sections: true
+    pdf:
+        toc: true
+        toc-location: left-body
+bibliography: references.bib
 execute:
   echo: false
-bibliography: references.bib
+  warning: false
+  message: false 
 editor: source
 ---
 
@@ -27,7 +31,7 @@ between 1906 and 1972 for each province.
 
 Horse population data were sourced from the 
 [Government of Canada's Open Data website](http://open.canada.ca/en/open-data) 
-(Government of Canada, 2017a and Government of Canada, 2017b)[@horses1].
+(Government of Canada, 2017a and Government of Canada, 2017b)[@horses1; @horses2].
 
 ### Methods
 
@@ -39,7 +43,7 @@ as well as Quarto (Allaire et al. 2022) [@Allaire_Quarto_2022].
 
 ### Results
 
-![](../results/horse_pops_plot.png){width=70% #fig-horse}
+![](../results/horse_pops_plot.png){#fig-horse width=70%}
 
 @fig-horse: Horse populations for all provinces in Canada from 1906 - 1972.
 
@@ -72,7 +76,7 @@ $$s = \sqrt{\frac{\sum_{i=1}^N (x_i - \overline{x})^2}{N-1} }$$
 
 Additionally, note that in @tbl-standard-dev we consider the sample standard deviation of the number of horses during the same time span as @fig-horse.
 
-![](../results/horse_pops_plot_largest_sd.png){width=70% #fig-sd}
+![](../results/horse_pops_plot_largest_sd.png){#fig-sd width=70%}
 
 @fig-sd: Horse populations for the province with the largest standard deviation
 
