--- a/reports/qmd_example.qmd
+++ b/reports/qmd_example.qmd
@@ -22,30 +22,28 @@ from IPython.display import Markdown, display
 from tabulate import tabulate
 ```
 
-### Aim
+## Aim
 
 This project explores the historical population of horses in Canada 
 between 1906 and 1972 for each province.
 
-### Data
+## Data
 
 Horse population data were sourced from the 
 [Government of Canada's Open Data website](http://open.canada.ca/en/open-data) 
-(Government of Canada, 2017a and Government of Canada, 2017b)[@horses1; @horses2].
+(@horses1, @horses2).
 
-### Methods
+## Methods
 
 The Python programming language (Van Rossum and Drake 2009) [@Python]
 and the following Python packages were used to perform the analysis: 
-pandas (McKinney 2010)[@pandas], altair (VanderPlas 2018) [@altair], click (Team 2020) [@click], 
-as well as Quarto (Allaire et al. 2022) [@Allaire_Quarto_2022]. 
-*Note: this report is adapted from Timbers (2020).*[@ttimbers-horses] 
+pandas (@pandas), altair (@altair), click (@click), 
+as well as Quarto (@Allaire_Quarto_2022). 
+*Note: this report is adapted from @ttimbers-horses.* 
 
-### Results
+## Results
 
-![](../results/horse_pops_plot.png){#fig-horse width=70%}
-
-@fig-horse: Horse populations for all provinces in Canada from 1906 - 1972.
+![Horse populations for all provinces in Canada from 1906 - 1972.](../results/horse_pops_plot.png){#fig-horse}
 
 We can see from @fig-horse that Ontario, Saskatchewan and Alberta 
 have had the highest horse populations in Canada. 
@@ -76,10 +74,8 @@ $$s = \sqrt{\frac{\sum_{i=1}^N (x_i - \overline{x})^2}{N-1} }$$
 
 Additionally, note that in @tbl-standard-dev we consider the sample standard deviation of the number of horses during the same time span as @fig-horse.
 
-![](../results/horse_pops_plot_largest_sd.png){#fig-sd width=70%}
-
-@fig-sd: Horse populations for the province with the largest standard deviation
+![Horse populations for the province with the largest standard deviation](../results/horse_pops_plot_largest_sd.png){#fig-sd width=70%}
 
 In @fig-sd we zoom in and look at the province of `{python} largest_sd`, which had the largest spread of values in terms of standard deviation.
 
-### References
+## References
